# EcoPaste

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
scripts/: buildWindows.ps1  copyExe.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/setup/: mod.rs
src-tauri/src/plugins/paste/: Cargo.toml
src-tauri/src/plugins/paste/src/commands/: mod.rs  windows.rs
src-tauri/src/plugins/window/src/commands/: mod.rs
src/assets/css/: global.scss
src/components/ProShortcut/: index.tsx  keyboard.ts
src/components/Scrollbar/: index.tsx
src/constants/: index.ts
src/database/: index.ts
src/hooks/: useClipboard.ts  useContextMenu.ts  useHistoryList.ts  useRegister.ts  useTauriFocus.ts  useTray.ts
src/locales/: index.ts  zh-CN.json
src/pages/Main/: index.tsx
src/pages/Main/components/GroupList/: index.tsx
src/pages/Main/components/HistoryList/components/Header/: index.tsx
src/pages/Main/components/HistoryList/components/Item/: index.tsx
src/pages/Main/components/HistoryList/components/Text/: index.tsx
src/pages/Main/components/StandardMode/: index.tsx
src/pages/Preference/: index.tsx
src/pages/Preference/components/Clipboard/: index.tsx
src/pages/Preference/components/General/: index.tsx
src/plugins/: clipboard.ts  window.ts
src/stores/: clipboard.ts  clipboardRuntime.ts  global.ts
src/types/: database.d.ts  plugin.d.ts  store.d.ts
src/utils/: color.ts  dayjs.ts  history.ts  is.ts  store.ts
(+1 files in other folders)
