[package]
name = "tauri-plugin-eco-paste"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-paste"

[dependencies]
tauri.workspace = true
serde.workspace = true
tauri-plugin-eco-window.workspace = true
log.workspace = true
winapi = { version = ">=0.3, <1", features = ["winuser", "windef"] }
enigo = ">=0.2, <1"

[build-dependencies]
tauri-plugin.workspace = true

[features]
cargo-clippy = []
